# sagi-lab

./: .gitignore  README.md  docker-compose.yml
.agent/skills/docker-compose/: SKILL.md
.agent/skills/langchain-architecture/: SKILL.md
.agent/skills/python-code-style/: SKILL.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: alerts.py  analysis.py  health.py  triage.py
backend/app/core/: config.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: alert.py  entity.py  ti_match.py  triage_result.py
backend/app/pkg/logger/: __init__.py  logger.py
backend/app/pkg/virustotal/: client.py
backend/app/schemas/: __init__.py  alert.py  common.py  triage.py
backend/app/services/: alert_service.py  triage_service.py
backend/app/triage/: __init__.py  graph.py  state.py
backend/app/triage/nodes/: __init__.py  analysis.py  attack_mapping.py  classify.py  entity_extraction.py  ti_matching.py
backend/app/triage/prompts/: analysis_full.md  analysis_malicious.md  attack_mapping.md  classification.md  entity_extraction.md
backend/app/utils/: common.py  constants.py  prompt_loader.py
frontend/: App.tsx  Dockerfile  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: AlertList.tsx  TriageStation.tsx
frontend/services/: api.ts
