[project]
name = "sagi-lab-backend"
version = "0.1.0"
description = "SAGI LAB - Alert Triage System Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "langchain>=1.2.8",
    "langchain-qwq>=0.3.4",
    "langgraph>=1.0.7",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.6",
    "loguru==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
